--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@ body {
     background: #0a0a0a;
     text-align: center;
     width: 400px;
-    margin: 80px auto;
-    padding: 30px;
+    margin: 30px auto;
+    padding: 20px;
 
 }
 form {
@@ -65,7 +65,7 @@ form {
     background: #eec303;
     border-color: black;
     
-    border-radius: 50%;
+    /* border-radius: 60%; */
     color: black;
     font-size: 20px;
 }
